Allow events in queue to coalesce while executing other events.

The code removed all events from the queue at the start which is flawed
because a slow handler could cause another event not to be coalesced.
This was explicitly tested in the browser test that is failing sometimes
now.

BUG=707491,674301

Review-Url: https://codereview.chromium.org/2793963002
Cr-Commit-Position: refs/heads/master@{#461843}

Former-commit-id: b1e592331aa12efbde84280e8b4e9248a7360c9d